core/src/util/snapshots/betterletter__util__iteration__tests__test_power_set-[]-false.snap
---
source: core/src/util/iteration.rs
expression: result
info:
  collection: []
  include_empty_set: false
---
[]

