core/src/util/snapshots/betterletter__util__iteration__tests__test_power_set-[_1,_].snap
---
source: core/src/util/iteration.rs
expression: result
info:
  collection:
    - 1
---
- []
- - 1

